# Record

./: README.md  __init__.py
Arduino/: windowXP
Arduino/WindowXP/: SZH_SSBH_069_TemHum  TEMT6000light.cpp  fullcode.cpp  빗물감지.cpp
DNN-Partition-demo/: Branchy_Alexnet.py  Branchy_Alexnet_Infer.py  DNN_Partition_Client.py  DNN_Partition_Server.py  Model_Pair.py  partition.thrift  train_and_save_model.py
DNN-Partition-demo/ResNet/: Client.py  Model_Pair.py  Resnet.py  Resnet_Infer.py  Server.py  partition.thrift
Gazebo+QGC/: Initial.py  README  README.md  middle_dronerespond.py  necessary.py
ResNet/: Client.py  Model_Pair.py  Resnet.py  ResnetPartition_Client.py  ResnetPartition_Server.py  Server.py  ambiguousResnet.py  ambiguous_ResNet_Infer.py
devel/: local_setup.fish  local_setup.sh  setup.fish  setup.sh
ina219/: INA219_yolo.py  INA219test.py  calculatior.py  cvpower_final.py  intend.py  intend_final.py  library_test.py
my_yolo_rqt_plugin/catkin_ws/src/rqt_image_view_ready/: CMakeLists.txt  package.xml  plugin.xml
my_yolo_rqt_plugin/catkin_ws/src/rqt_image_view_ready/resource/: streaming.ui
my_yolo_rqt_plugin/catkin_ws/src/rqt_image_view_ready/scripts/: publish_video.py
my_yolo_rqt_plugin/catkin_ws/src/rqt_image_view_ready/src/my_rqt_video_plugin/: video_plugin.py
raspberrypi/: GPSS6MV2gy-neo  GPSez-0048.py  gy-neoNMEAparsing  mjpg.py  perf.py  picam_selfzoon  picam_zoomGUI  powersstate.py  spi.py
src/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/resource/: streaming.ui
src/src/my_rqt_video_plugin/: video_plugin.py
(+9 files in other folders)
